[project]
name = "TBF"
version = "1.0"
description = "That's Formula module for python."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "fly-toribird", email = "fly-toribird@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Math :: Formula"
]
dependencies = []

[project.urls]
Repository = "https://github.com/fly-toribird/TBF"